deployments/ghost-blog/resources/ghost-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # annotations:
    # np.rke2.io: resolved
  # creationTimestamp: null
  labels:
    kubernetes.io/metadata.name: ghost
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.23
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.23
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.23
  name: ghost
