deployments/ghost-blog/resources/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-blog
  # namespace: ghost
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ghost-blog
  template:
    metadata:
      labels:
        app: ghost-blog
    spec:
      containers:
      - image: ghost:5
        imagePullPolicy: Always #IfNotPresent
        name: ghost-blog
        resources:
          # limits:
          #   memory: 64Mi
          #   cpu: 100m
          request:
            memory: 64Mi
            cpu: 100m
        ports:
        - containerPort: 2368
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghost-blog-content
      volumes:
      - name: ghost-blog-content
        persistentVolumeClaim:
          claimName: ghost-blog-content

#"mail": {
#   "transport": "SMTP",
#   "options": {
#     "service": "Mailgun",
#     "host": "smtp.mailgun.org",
#     "port": 465,
#     "secure": true,
#     "auth": {
#       "user": "postmaster@example.mailgun.org",
#       "pass": "1234567890"
#     }
#   }
# },
