deployments/ghost-blog/resources/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-blog
  namespace: ghost-blog
spec:
  selector:
    app: ghost-blog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 2368
