deployments/ghost-blog/resources/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
    # kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: http-le-production
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # ingress.kubernetes.io/proxy-body-size: "100m"
    # nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    #ingress.kubernetes.io/proxy-body-size: "0"
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: ghost-blog
  # namespace: ghost
spec:
  ingressClassName: nginx
  rules:
    - host: ghost.plasa.cloud
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: ghost-blog
                port:
                  number: 2368

  tls:
  - hosts:
    - ghost.plasa.cloud
    secretName: star-plasa-cloud-tls
